--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Controle Profissional de Funcionários</title>
+<title>Gestão de Contas (Fora do Radar)</title>
 <style>
 body {
     font-family: Arial;
