--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ button {
 </head>
 <body>
 
-<h2>Controle Profissional de Funcionários</h2>
+<h2>Controle de Contas (Fora do Radar)</h2>
 
 <div class="container">
 
